--- a/src/assets/_mixins.scss
+++ b/src/assets/_mixins.scss
@@ -52,9 +52,26 @@
   color: $white;
   margin-top: 50px;
   transition: 0.3s;
-  &:hover {
+  &:hover, &.selected {
     background-color: $light-grey;
     color: $grey;
+    transition: 0.3s;
+  }
+}
+
+@mixin secondary-button {
+  border: none;
+  border-radius: 15px;
+  height: 30px;
+  width: 160px;
+  background-color: $light-grey;
+  font-family: "Kumbh Sans";
+  font-size: 16px;
+  color: $grey;
+  transition: 0.3s;
+  &:hover {
+    background-color: $grey;
+    color: $white;
     transition: 0.3s;
   }
 }
